log
Thu 20 Apr 2023 04:38:41 PM UTC: 
 tests:  1|8
total_score: 0/70
ee76437
Thu 20 Apr 2023 04:51:21 PM UTC: 
 treemap.c | 60 ++++++++++++++++++++++--------------------------------------
 1 file changed, 22 insertions(+), 38 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:14: error: ‘null’ undeclared (first use in this function)
   41 |   if (new == null)
      |              ^~~~
treemap.c:41:14: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
77abb00
